[package]
name = "zxing-rs"
version = "0.1.0"
authors = ["higumachan <yuta.hinokuma725@gmail.com>"]
edition = "2018"
exclude = [
    "image/*",
    "submodules/zxing-cpp/test/*"
]

[build-dependencies]
glob = "0.3.0"
cc = "*"

[dependencies]
image = "0.21"
num = "*"

[features]
parallel = ["cc/parallel"]
