[package]
name = "zxing-rs"
version = "0.1.0"
authors = ["higumachan <yuta.hinokuma725@gmail.com>"]
edition = "2018"
build = "build.rs"
include = [
    "c_api/**/*",
    "src/*",
    "build.rs",
    "Cargo.toml",
    "submodules/zxing-cpp/core/**/*",
]

[build-dependencies]
glob = "0.3.0"
cc = "*"

[dependencies]
image = "0.21"
num = "*"

[features]
parallel = ["cc/parallel"]
